--- a/styles.css
+++ b/styles.css
@@ -1,601 +1,636 @@
-@import url('https://fonts.googleapis.com/css?family=Cabin|Karla|Source+Sans+Pro:400,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700;900&display=swap");
 
 /*Global styles*/
 *,
 *::before,
 *::after {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 :root {
-    --main-font: 'Source Sans Pro', sans-serif;
-    --secondary-font: 'Karla', cursive;
-    --body-font: 'Cabin', sans-serif;
-    --main-font-color-dark: #121212;
-    --secondary-font-color: #121212;
-    --body-font-color: #121212;
+  --main-font: "Poppins", sans-serif;
+  --secondary-font: "Poppins", sans-serif;
+  --body-font: "Poppins", sans-serif;
+  --main-font-color-dark: #4b5439;
+  --secondary-font-color: #d4d4d4;
+  --accent-font-color: #ffd723;
+  --body-font-color: #121212;
 }
 
-
-/*  COLOR  */
-/*  FONT 
-@font-face {
-  font-family: "Galano grotesque";
-  src: url("../fonts/GalanoGrotesque-Bold.ttf") format("truetype"); }
-@font-face {
-  font-family: "Inter bold";
-  src: url("../fonts/Inter-Bold.woff") format("woff");
-  src: url("../fonts/Inter-Bold.woff2") format("woff2"); }
-@font-face {
-  font-family: "Inter medium";
-  src: url("../fonts/Inter-Medium.woff") format("woff");
-  src: url("../fonts/Inter-Medium.woff2") format("woff2"); }
-*/
 html {
-    font-family: var(--body-font);
-    font-size: 10px;
-    color: var(--body-font-color);
-    scroll-behavior: smooth;
+  font-family: var(--body-font);
+  font-size: 10px;
+  color: var(--body-font-color);
+  scroll-behavior: smooth;
 }
 
 body {
-    overflow-x: hidden;
+  overflow-x: hidden;
 }
 
 section {
-    padding: 3.8rem 0;
-    overflow: hidden;
+  padding: 3.8rem 0;
+  overflow: hidden;
 }
 
 img {
-    width: 100%;
-    max-width: 100%;
+  width: 100%;
+  max-width: 100%;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 p {
-    font-size: 1.4rem;
+  font-size: 1.4rem;
 }
 
-p1 {
-    font-size: 3rem;
+.headline {
+  font-size: 3rem;
 }
 
 .container {
-    width: 100%;
-    max-width: 122.5rem;
-    margin: 0 auto;
-    padding: 0 2rem;
-
+  width: 100%;
+  max-width: 122.5rem;
+  margin: 0 auto;
+  padding: 0 2rem;
 }
 
 /* HEADER STYLES */
 header {
-    width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 1;
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), transparent);
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), transparent);
 }
 
 .nav {
-    height: 7.2rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  height: 7.2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .menu-toggle {
-    color: #fff;
-    font-size: 2.2rem;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    right: 2.5rem;
-    cursor: pointer;
-    z-index: 1500;
+  color: #fff;
+  font-size: 2.2rem;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 2.5rem;
+  cursor: pointer;
+  z-index: 1500;
 }
 
 .fa-times {
-    display: none;
+  display: none;
 }
 
 .nav-list {
-    list-style: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 80%;
-    height: 100vh;
-    background-color: var(--main-font-color-dark);
-    padding: 4.4rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    z-index: 1250;
-    transform: translateX(-100%);
-    transition: transform .5s ease-in;
+  list-style: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 80%;
+  height: 100vh;
+  background-color: var(--main-font-color-dark);
+  padding: 4.4rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  z-index: 1250;
+  transform: translateX(-100%);
+  transition: transform 0.5s ease-in;
 }
 
 .nav::before {
-    content: '';
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.8);
-    z-index: 1200;
-    /* opacity: 0; */
-    transform: scale(0);
-    transform: opacity .5s;
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 1200;
+  /* opacity: 0; */
+  transform: scale(0);
+  transform: opacity 0.5s;
 }
 
 .open .fa-times {
-    display: block;
+  display: block;
 }
 
 .open .fa-bars {
-    display: none;
+  display: none;
 }
 
 .open .nav-list {
-    transform: translateX(0);
+  transform: translateX(0);
 }
 
 .open .nav::before {
-    opacity: 1;
-    transform: scale(1);
+  opacity: 1;
+  transform: scale(1);
 }
 
 .nav-item {
-    border-bottom: 2px solid rgba(255, 255, 255, 0.3);
+  border-bottom: 2px solid rgba(255, 255, 255, 0.3);
 }
 
 .nav-link {
-    display: block;
-    color: #fff;
-    text-transform: uppercase;
-    font-size: 1.6rem;
-    letter-spacing: 2px;
-    margin-right: -2px;
-    transition: color .5s;
+  display: block;
+  color: #fff;
+  font-size: 1.6rem;
+  letter-spacing: 2px;
+  margin-right: -2px;
 }
 
 .nav-link:hover {
-    color: var(--secondary-font-color);
+  text-decoration: underline;
 }
 
 /* HERO */
 .hero {
-    width: 100%;
-    height: 100vh;
-    background: url('./images/Abilitee.png') center no-repeat;
-    background-size: cover;
-    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.6);
-    display: flex;
-    align-items: center;
-    text-align: left;
+  width: 100%;
+  height: 100vh;
+  background: url("./images/Abilitee.png") center no-repeat;
+  background-size: cover;
+  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.05);
+  display: flex;
+  align-items: center;
+  text-align: left;
 }
 
 .sub-headline {
-    font-size: 8.5rem;
-    font-family: var(--secondary-font);
-    color: var(--secondary-font-color);
-    font-weight: 100;
-    line-height: .4;
-    letter-spacing: 2px;
-    opacity: 0;
-    animation: fadeUp .5s forwards;
-    animation-delay: .5s;
+  font-size: 8.5rem;
+  font-family: var(--secondary-font);
+  color: var(--secondary-font-color);
+  font-weight: 100;
+  line-height: 0.4;
+  letter-spacing: 2px;
+  opacity: 0;
+  animation: fadeUp 0.5s forwards;
+  animation-delay: 0.5s;
 }
 
 .first-letter {
-    text-transform: uppercase;
-    font-size: 10.3rem;
+  text-transform: uppercase;
+  font-size: 10.3rem;
 }
 
 .headline {
-    color: #FFFFFF;
-    font-size: 3.7rem;
-    font-family: var(--main-font);
-    font-weight: 900;
-    letter-spacing: .5rem;
-    margin-right: -.5rem;
-    opacity: 0;
-    animation: scale .5s forwards;
-    animation-delay: .5s;
+  color: #ffffff;
+  font-size: 3.7rem;
+  font-family: var(--main-font);
+  font-weight: 900;
+  margin-right: -0.5rem;
+  opacity: 0;
+  animation: scale 0.5s forwards;
+  animation-delay: 0.5s;
 }
 
 .separator {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .line {
-    width: 100%;
-    max-width: 8.4rem;
-    height: .25rem;
-    background-color: #fff;
-    position: relative;
-    opacity: 0;
-    animation: grow 2s forwards;
-    animation-delay: .9s;
+  width: 100%;
+  max-width: 8.4rem;
+  height: 0.25rem;
+  background-color: #fff;
+  position: relative;
+  opacity: 0;
+  animation: grow 2s forwards;
+  animation-delay: 0.9s;
 }
 
-
 .single-animation {
-    opacity: 0;
-    animation: fadeDown .5s forwards;
-    animation-delay: 1.5s;
+  opacity: 0;
+  animation: fadeDown 0.5s forwards;
+  animation-delay: 1.5s;
 }
 
 .headline-description h5 {
-    color: #fff;
-    font-size: 2.4rem;
-    font-weight: 100;
-    text-transform: uppercase;
-    margin-bottom: 1.2rem;
-    letter-spacing: 3px;
-    margin-right: -3px;
+  color: #fff;
+  font-size: 2.4rem;
+  font-weight: 100;
+  text-transform: uppercase;
+  margin-bottom: 1.2rem;
+  letter-spacing: 3px;
+  margin-right: -3px;
 }
 
 .btn {
-    display: inline-block;
-    text-transform: uppercase;
-    margin-right: -2px;
+  display: inline-block;
+  margin-right: -2px;
 }
 
 .cta-btn {
-    font-size: 1.1rem;
-    background-color: #fff;
-    padding: .9rem 1.8rem;
-    color: var(--body-font-color);
-    border-radius: .4rem;
-    transition: background-color .5s;
+  font-size: 1.1rem;
+  background-color: #fff;
+  padding: 0.9rem 1.8rem;
+  color: var(--body-font-color);
+  border-radius: 0.4rem;
+  transition: background-color 0.5s;
 }
 
 .cta-btn:hover,
 .cta-btn:focus {
-    color: #fff;
-    background-color: var(--secondary-font-color);
+  color: #fff;
+  background-color: var(--secondary-font-color);
 }
 
 /* MY STORY */
 .global-headline {
-    text-align: left;
-    margin-top: 3.9rem;
+  text-align: left;
+  margin-top: 3.9rem;
 }
-
-.discover-our-story .global-headline {
-    margin-top: 6.9rem;
-}
-
 
 .headline-dark {
-    color: var(--main-font-color-dark);
-    letter-spacing: .7rem;
-    margin-right: -.7rem;
+  color: var(--main-font-color-dark);
+  margin-right: -0.7rem;
 }
 
 .global-headline .sub-headline {
-    letter-spacing: -1px;
-    line-height: .42;
+  letter-spacing: -1px;
+  line-height: 0.42;
 }
 
-.restaurant-info {
-    text-align: left;
-
+.project-info {
+  display: grid;
+  grid-template-areas:
+    "title"
+    "img"
+    "description";
+  text-align: left;
 }
 
-.restaurant-description {
-    margin-bottom: 3rem;
+.project-img {
+  grid-area: img;
 }
 
-.restaurant-description p {
-    line-height: 1.6;
-    margin-bottom: 2.4rem;
+.project-title {
+  grid-area: title;
+}
+
+.project-description {
+  grid-area: description;
+  margin-bottom: 3rem;
+  padding: 3rem;
+}
+
+.project-description p {
+  line-height: 1.6;
+  margin-bottom: 2.4rem;
 }
 
 .body-btn {
-    font-size: 1.5rem;
-    color: var(--secondary-font-color);
-    position: relative;
-    transition: color .5s;
+  font-size: 1.5rem;
+  color: var(--secondary-font-color);
+  position: relative;
+  transition: color 0.5s;
+}
+
+.body-btn .fas {
+  font-size: 1.2em;
+}
+
+.body-btn.accent {
+  color: var(--accent-font-color);
 }
 
 .body-btn::before {
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: -3px;
-    width: 100%;
-    height: 2px;
-    background-color: var(--secondary-font-color);
-    transition: background-color .5s;
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  background-color: var(--secondary-font-color);
+  transition: background-color 0.5s;
+}
+
+.body-btn.accent::before {
+  background-color: var(--accent-font-color);
 }
 
 .body-btn:hover,
 .body-btn:focus {
-    color: var(--main-font-color-dark);
+  color: var(--main-font-color-dark);
 }
 
 .body-btn:hover::before,
 .body-btn:focus::before {
-    background-color: var(--main-font-color-dark);
+  background-color: var(--main-font-color-dark);
 }
 
 .between {
-    min-height: 65vh;
-    display: flex;
-    align-items: center;
+  min-height: 65vh;
+  display: flex;
+  align-items: center;
 }
 
 .image-group {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 1.5rem;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 1.5rem;
 }
-
 
 /* FOOTER */
 footer {
-    padding: 7rem 0;
-    background-color: #595959;
-    color: #fff;
-    text-align: center;
-    position: relative;
+  padding: 7rem 0;
+  background-color: #595959;
+  color: #fff;
+  text-align: center;
+  position: relative;
 }
 
 .back-to-top {
-    width: 7rem;
-    height: 7rem;
-    background-color: #595959;
-    position: absolute;
-    top: -3rem;
-    left: 50%;
-    transform: translateX(-50%);
-    border-radius: 50%;
+  width: 7rem;
+  height: 7rem;
+  background-color: #595959;
+  position: absolute;
+  top: -3rem;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 50%;
 }
 
 .back-to-top i {
-    display: block;
-    color: #fff;
-    font-size: 2rem;
-    padding: 2rem;
-    animation: up 2s infinite;
+  display: block;
+  color: #fff;
+  font-size: 2rem;
+  padding: 2rem;
+  animation: up 2s infinite;
 }
 
 .footer-content {
-    overflow: hidden;
-    text-align: left
+  overflow: hidden;
+  text-align: left;
 }
 
 .footer-content h4 {
-    font-size: 1.9rem;
-    text-transform: uppercase;
-    font-weight: 100;
-    letter-spacing: 3px;
-    margin-bottom: 3rem;
+  font-size: 1.9rem;
+  text-transform: uppercase;
+  font-weight: 100;
+  letter-spacing: 3px;
+  margin-bottom: 3rem;
 }
 
 .footer-content-about {
-    margin-bottom: 5.4rem;
+  margin-bottom: 5.4rem;
 }
 
 .footer-content-about p {
-    line-height: 4;
+  line-height: 4;
 }
 
 .social-icons {
-    list-style: none;
-    margin-bottom: 0.1rem;
-    display: flex;
-    justify-content: left;
+  list-style: none;
+  margin-bottom: 0.1rem;
+  display: flex;
+  justify-content: left;
 }
 
 .social-icons i {
-    font-size: 2rem;
-    color: #fff;
-    padding: .8rem 2rem;
-    opacity: .5;
-    transition: color .5s;
+  font-size: 2rem;
+  color: #fff;
+  padding: 0.8rem 2rem;
+  opacity: 0.5;
+  transition: color 0.5s;
+}
+
+.social-icons i:first-child {
+  padding-left: 0;
 }
 
 .social-icons i:hover,
 .social-icons i:focus {
-    color: var(--secondary-font-color);
+  color: var(--secondary-font-color);
 }
-
 
 /* MEDIA QUERIES */
 @media screen and (min-width: 900px) {
-    section {
-        padding: 7.9rem;
-    }
+  section {
+    padding: 7.9rem;
+  }
+  section.project {
+    padding-left: 0;
+    padding-right: 0;
+  }
 
-    .menu-toggle {
-        display: none;
-    }
+  .menu-toggle {
+    display: none;
+  }
 
-    .nav {
-        justify-content: space-between;
-    }
+  .nav {
+    justify-content: space-between;
+  }
 
-    .nav-list {
-        position: initial;
-        width: initial;
-        height: initial;
-        background-color: transparent;
-        padding: 0;
-        justify-content: initial;
-        flex-direction: row;
-        transform: initial;
-        transition: initial;
-    }
+  .nav-list {
+    position: initial;
+    width: initial;
+    height: initial;
+    background-color: transparent;
+    padding: 0;
+    justify-content: initial;
+    flex-direction: row;
+    transform: initial;
+    transition: initial;
+  }
 
-    .nav-item {
-        margin: 0 2.4rem;
-        border: none;
-    }
+  .nav-item {
+    margin: 0 2.4rem;
+    border: none;
+  }
 
-    .nav-item:last-child {
-        margin-right: 0;
-    }
+  .nav-item:last-child {
+    margin-right: 0;
+  }
 
-    .nav-link {
-        font-size: 1.3rem;
-    }
+  .nav-link {
+    font-size: 1.3rem;
+  }
 
-    .active {
-        position: relative;
-    }
+  .active {
+    position: relative;
+  }
 
-    .active::before {
-        content: '';
-        position: absolute;
-        width: 100%;
-        height: 2px;
-        background-color: #fff;
-        left: 0;
-        bottom: -3px;
-    }
+  .active::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: #fff;
+    left: 0;
+    bottom: -3px;
+  }
 
-    .sub-headline {
-        font-size: 20rem;
-    }
+  .sub-headline {
+    font-size: 20rem;
+  }
 
-    .first-letter {
-        font-size: 12.2rem;
-    }
+  .first-letter {
+    font-size: 12.2rem;
+  }
 
-    .headline {
-        font-size: 8.7rem;
-        letter-spacing: .8rem;
-    }
+  .title {
+    max-width: 50%;
+    color: #ffffff;
+    font-size: 6.5rem;
+  }
 
-    .line {
-        max-width: 11.4rem;
-    }
+  .headline {
+    font-size: 3.5rem;
+  }
 
-    .restaurant-info {
-        display: flex;
-        align-items: center;
-    }
+  .line {
+    max-width: 11.4rem;
+  }
 
-    .restaurant-info > div {
-        flex: 1;
-    }
+  .project-info {
+    grid-template-areas:
+      "img title"
+      "img description";
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+  }
 
-    .padding-right {
-        padding-right: 7rem;
-    }
+  .project-info.alt {
+    grid-template-areas:
+      "title img"
+      "description img";
+  }
+  .project-info > div {
+    flex: 1;
+  }
 
-    .footer-content {
-        max-width: 77.5rem;
-        margin: auto;
-    }
+  .introduction {
+    max-width: 80%;
+  }
 
-    .footer-content-about {
-        max-width: 71.3rem;
-        margin: 0 auto 5.4rem;
-    }
+  .padding-right {
+    padding-right: 20rem;
+  }
 
-    .footer-content-divider {
-        display: flex;
-        justify-content: space-between;
-    }
+  .padding-left-sm {
+    padding-left: 10rem;
+  }
 
-    .social-media,
-    .newsletter-form {
-        width: 100%;
-        max-width: 67.3rem;
-        margin: 0 1rem;
-    }
+  .padding-right-sm {
+    padding-right: 10rem;
+  }
 
-    .social-icons i {
-        opacity: 1;
-    }
+  .padding-left {
+    padding-left: 20rem;
+  }
 
-    .newsletter-btn {
-        margin-left: 7.5rem;
-    }
+  .footer-content-divider {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .social-media,
+  .newsletter-form {
+    width: 100%;
+    max-width: 67.3rem;
+  }
+
+  .social-icons i {
+    opacity: 1;
+  }
+
+  .newsletter-btn {
+    margin-left: 7.5rem;
+  }
 }
 
 /* ANIMATIONS */
 @keyframes fadeUp {
-    0% {
-        transform: translateY(4rem);
-    }
+  0% {
+    transform: translateY(4rem);
+  }
 
-    100% {
-        opacity: 1;
-        transform: translateY(0);
-    }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 @keyframes fadeDown {
-    0% {
-        transform: translateY(-1rem);
-    }
+  0% {
+    transform: translateY(-1rem);
+  }
 
-    100% {
-        opacity: 1;
-        transform: translateY(0);
-    }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 @keyframes scale {
-    0% {
-        transform: scale(2);
-    }
+  0% {
+    transform: scale(2);
+  }
 
-    100% {
-        opacity: 1;
-        transform: scale(1);
-    }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
 }
 
 @keyframes grow {
-    0% {
-        width: 0;
-    }
+  0% {
+    width: 0;
+  }
 
-    100% {
-        opacity: 1;
-        width: 100%;
-    }
+  100% {
+    opacity: 1;
+    width: 100%;
+  }
 }
 
 @keyframes spin {
-    0% {
-        transform: rotate(0);
-    }
+  0% {
+    transform: rotate(0);
+  }
 
-    100% {
-        opacity: 1;
-        transform: rotate(-360deg);
-    }
+  100% {
+    opacity: 1;
+    transform: rotate(-360deg);
+  }
 }
 
 @keyframes up {
-    0% {
-        opacity: 0;
-    }
+  0% {
+    opacity: 0;
+  }
 
-    50% {
-        opacity: 1;
-    }
+  50% {
+    opacity: 1;
+  }
 
-    100% {
-        opacity: 0;
-        transform: translateY(-1rem);
-    }
+  100% {
+    opacity: 0;
+    transform: translateY(-1rem);
+  }
+}
+
+.introduction {
+  font-weight: bold;
+  font-size: 3rem;
+  line-height: 3.8rem;
+  color: var(--main-font-color-dark);
+}
+
+.divider {
+  border-bottom: 1px solid var(--secondary-font-color);
 }
