--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,12 @@ body {
   font-size: 6.5rem;
 }
 
+.titleproject {
+  max-width: 50%;
+  color: var(--main-font-color-dark);
+  font-size: 6.5rem;
+}
+
 section {
   padding: 3.8rem 0;
   overflow: hidden;
@@ -45,6 +51,15 @@ img {
   width: 100%;
   max-width: 100%;
 }
+
+
+img-project {
+  padding: 3.8rem ;
+  width: 80%;
+  max-width: 80%;
+}
+
+
 
 a {
   text-decoration: none;
@@ -173,6 +188,17 @@ header {
   text-align: left;
 }
 
+.hero-project {
+  width: 100%;
+  height: 50vh;
+  background: url("./images/Abilitee.png") center no-repeat;
+  background-size: cover;
+  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.05);
+  display: flex;
+  align-items: center;
+  text-align: left;
+}
+
 .sub-headline {
   font-size: 8.5rem;
   font-family: var(--secondary-font);
@@ -279,7 +305,29 @@ header {
   text-align: left;
 }
 
-.project-img {
+.project-overview {
+  display: grid;
+  grid-template-areas:
+    "title"
+    "description"
+  
+  "title"
+    "description"
+
+}
+
+
+
+bodytest {
+  margin: 0;
+}
+
+#over img {
+  align: center;
+  padding: 7rem;
+
+
+}.project-img {
   grid-area: img;
 }
 
