--- a/styles.css
+++ b/styles.css
@@ -188,10 +188,10 @@ header {
   text-align: left;
 }
 
-.hero-project {
+.heroproject {
   width: 100%;
   height: 50vh;
-  background: url("./images/Abilitee.png") center no-repeat;
+  background: url("/images/Abilitee.png") center no-repeat;
   background-size: cover;
   box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.05);
   display: flex;
@@ -323,7 +323,7 @@ bodytest {
 }
 
 #over img {
-  align: center;
+  position: center;
   padding: 7rem;
 
 
