--- a/styles.css
+++ b/styles.css
@@ -398,6 +398,39 @@ bodytest {
   grid-gap: 1.5rem;
 }
 
+
+/* Client showcase Grid*/
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+  grid-gap: 1rem;
+}
+
+.grid > div {
+  background: white;
+  padding: 1rem;
+  display: grid;
+  place-items: center;
+}
+
+.grid > div::before {
+  content: "";
+  padding-bottom: 100%;
+  display: block;
+}
+
+.grid > div {
+  /* ... */
+  display: grid;
+}
+.grid > div::before,
+.grid > div > img {
+  grid-area: 1 / 1 / 2 / 2;
+}
+
+
+
 /* FOOTER */
 footer {
   padding: 7rem 0;
