--- a/styles.css
+++ b/styles.css
@@ -401,35 +401,83 @@ bodytest {
 
 /* Client showcase Grid*/
 
-.grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
-  grid-gap: 1rem;
-}
-
-.grid > div {
-  background: white;
-  padding: 1rem;
-  display: grid;
-  place-items: center;
-}
-
-.grid > div::before {
-  content: "";
-  padding-bottom: 100%;
-  display: block;
-}
-
-.grid > div {
-  /* ... */
-  display: grid;
-}
-.grid > div::before,
-.grid > div > img {
-  grid-area: 1 / 1 / 2 / 2;
-}
 
 
+/* Client showcase Flex box*/
+
+
+@media only screen and (max-width: 500px) {
+  .flexbox {
+    display: flex;
+    flex-direction: column;
+  } 
+  
+  .item-C {
+    order: 2;
+  } 
+ }
+ 
+
+ @media only screen and (min-width: 501px) {
+   .item-A {
+    margin-left: 8rem;
+ 
+     float: left;
+     width: 49%;
+   }
+   
+   .item-B {
+    margin-right: 8rem;
+     float: right;
+     width: 40%;
+   }  
+
+   .item-C {
+    float: right;
+    width: 40%;
+  }  
+   
+   .item-D {
+     clear: both;
+   }
+ }
+
+ 
+ .item {
+   box-sizing: border-box;  
+   padding: 2em;
+   background: #fff;  
+   color: black; 
+   margin-bottom: 1em;
+   
+ }
+ 
+ .item-A {
+   height: 20em;
+ }
+ 
+ .item-C {
+   height: 20em;
+ }
+ 
+
+ 
+ .css-mine {
+   position: fixed;
+   bottom: 0;
+ }
+
+
+
+
+ .itemSkills {
+  box-sizing: border-box;  
+  padding: 2em;
+  background: #fff;  
+  color: black; 
+  margin-bottom: 1em;
+  box-shadow: 0 20px 60px #000;
+}
 
 /* FOOTER */
 footer {
