--- a/styles.css
+++ b/styles.css
@@ -405,6 +405,10 @@ bodytest {
 
 /* Client showcase Flex box*/
 
+.float-right {
+  float: right;
+  text-align: right;
+}
 
 @media only screen and (max-width: 500px) {
   .flexbox {
@@ -478,6 +482,79 @@ bodytest {
   margin-bottom: 1em;
   box-shadow: 0 20px 60px #000;
 }
+
+/* Test FlexBox SKILLS */
+.skills-flex-container {
+ 
+  margin: 0;
+  list-style: none;
+  height: 50rem;
+
+  width: 100%;
+  max-width: 122.5rem;
+  margin: 0 auto;
+  padding: 0 2rem;
+  
+  
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  background-color: white;
+  box-shadow: 20px 10px 60px #7b7c78;
+  
+  -webkit-flex-flow: row wrap;
+  justify-content: space-around;
+}
+
+.skill-flex {
+  max-width: 20rem;
+  height: 180px;
+  margin-top: 10px;
+  text-align: center;
+}
+
+
+/* Flex Logos */
+
+.logos-flex-container {
+  padding: 7.9rem;
+  margin: 0;
+  list-style: none;
+  
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  
+  -webkit-flex-flow: row wrap;
+  justify-content: space-around;
+}
+
+.logos-flex-item {
+  width: 200px;
+  height: 80px;
+  margin-top: 10px;
+  text-align: center;
+}
+
+@media screen and (max-width: 970px) {
+  .logos-flex-item {
+  width: 140px;
+  height: 80px;
+  margin-top: 10px;
+  text-align: center;
+}
+}
+
+.flex-item img {
+  width:100px;
+}
+ 
+
+
 
 /* FOOTER */
 footer {
