Added weekly challenges

--- a/styles.css
+++ b/styles.css
@@ -225,6 +225,11 @@ header {
   background-position-y: 50%;
 }
 
+#concepten .hero {
+  background: url("./images/GoogleDrive\ concept.png") center no-repeat;
+  background-position-y: 50%;
+}
+
 
 
 
